--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "laravel/framework": "^9.19",
         "laravel/passport": "^12.3",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7",
-        "ext-http": "*"
+        "laravel/tinker": "^2.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "larastan/larastan": "^2.9",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.4",
